@@ -1273,6 +1273,19 @@ image/jpeg
 	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
 	_category=Images
 
+# also image/jpeg
+image/jpg
+	_description=JPEG image
+	default_action_type=component
+	short_list_component_iids=OAFIID:GNOME_EOG_Control
+	short_list_component_iids_for_novice_user_level=OAFIID:GNOME_EOG_Control
+	short_list_component_iids_for_intermediate_user_level=OAFIID:GNOME_EOG_Control
+	short_list_component_iids_for_advanced_user_level=OAFIID:GNOME_EOG_Control
+	short_list_application_ids_for_novice_user_level=eog,electric_eyes,gimp
+	short_list_application_ids_for_intermediate_user_level=eog,electric_eyes,gimp
+	short_list_application_ids_for_advanced_user_level=eog,electric_eyes,gimp
+	_category=Images
+
 # also image/x-png
 image/png
 	_description=PNG image
