@@ -1,3 +1,9 @@
+2003-09-13  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-vfs-mime-magic: detect FLAC files with ID3 headers as FLAC
+	* gnome-vfs.keys.in: add image/jpg, the MacOS X Mailer engineers can't
+	read properly (Closes: #122184)
+
 2003-09-10  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in: pump up to 2.4.0
